# MPD-Spec

./: .gitignore  .gitmodules  Makefile  Makefile.in  README.md  configure  configure.ac  conformance-assertion-example.docx  conformance-report.txt  dff  diff.html  get-inventory  iepd-catalog.xsd  iepd-catalog.xsd.m4  inventory.xml  macros.m4  model-package-description-3.0-2013-10-15.docx  model-package-description-3.0-2013-10-15.txt  model-package-description-3.0.1.html  model-package-description-3.0.1.txt  model-package-description.docx  mpd  mpd-catalog-3.0.xsd  mpd-catalog-rules.sch  mpd-catalog-rules.sch.text.xsl  mpd-catalog.html  mpd-changelog-1.0.xsd  mpd-lexicon-1.0.owl  mpd-lexicon-1.1.owl  mpd-lexicon.xsl  mpd-spec.html  mpd-spec.txt  mpd-spec.xml  mpd6.txt  ms.txt  niem-iepd-spec.xml.m4  niem-mpd-spec.html  niem-mpd-spec.txt  niem-mpd-spec.xml  niem-mpd-spec.xml.m4  (+10 more)
HelloWorld-1.0rev1.iepd/: changelog.txt  readme.txt
HelloWorld-1.0rev1.iepd/application-info/: 00-HelloWorld.xpr
HelloWorld-1.0rev1.iepd/base-xsd/: xml-catalog.xml
HelloWorld-1.0rev1.iepd/iep-samples/: iep01.xml
Toolkit/: mpd-catalog-3.0.xsd  niem-conformance-assertion-example.docx  read-me.txt  readme.txt
conformance-assertion/: niem-conformance-assertion.docx  niem-conformance-assertion.png - Shortcut.lnk
cot-niem-0.9rc3.iepd/: 00-PublicRelease.txt  00-README.txt  01-changelog.txt  02-conformance.txt
cot-niem-0.9rc3.iepd/application-info/: 00-ncotProject.xpr
cot-niem-0.9rc3.iepd/documentation/: 02-TourTheIEPD.docx
cot-niem-0.9rc3.iepd/exi-xsd/: exi-schemas.xsd  exi-xml-catalog.xml  gml.xsd
cot-niem-0.9rc3.iepd/iep-sample/: iep1.xml
cot-niem-0.9rc3.iepd/schematron/: business-rules.sch
curie-functions/: Makefile  catalog-ontology.owl  curie-functions.xsl  curie-functions.xsl.xslext  curie-test.xsl  curie-test.xsl.xslext  curie-tests.report.txt  curie-tests.xml  xsl-functions.xsl
doc/: conformance-3.0a1.doc
examples/iepd1.pass/: mpd-catalog.xml
hlva/: hlva.html  hlva.xml
inputs/: 2019-03-12-chipman-mpd-spec-edited.docx  v3.0.1+chipman-review.docx
inventory/: get-inventory
meta/: manifest.xml
meta/manifest/: manifest.xsd
mpd-catalog-example/: catalog.xml  catalog.xsl  curie-functions.xsl  curie-functions.xsl.xslext  mpd-catalog.xml  mpd-catalog.xsl
mpd-toolkit-3.0/: conformance-assertion-example.docx  mpd-catalog-3.0.xsd  readme.txt
niem/: wantlist.xml
publish/: iepd-catalog.xsd  niem-iepd-spec.html  niem-iepd-spec.txt  niem-mpd-spec.html  niem-mpd-spec.txt
rules/: Makefile  defn.xml  refs.xml  rule.html  rule.xml  sed.txt  xsd.xsl
schematron-rules/: mpd-catalog(xpath2-sa).sch  mpd-catalog-in-wf-mpd.sch  mpd-catalog.sch  xml-catalog-wf-mpd.sch
src/: macros.m4  niem-iepd-spec.xml.m4  niem-mpd-spec.xml.m4
subset-for-mpd-catalog/: niem-core-subset-mpd-catalog.xls  wantlist.xml
xsd/: Makefile  catalog.xml  mpd-catalog-3.0.xsd  mpd-catalog-3.0.xsd - Shortcut.lnk  mpd-catalog-rules.sch  mpd-catalog-rules.sch.text.xsl  mpd-catalog.xml  mpd-xml-catalog.xml  niem-core-subset-mpd-catalog.xls  wantlist.xml  xml-catalog.xml
(+109 files in other folders)
